@@ -48,6 +48,7 @@ option(ENABLE_MPG123 "Enable mpg123 libraries (required for replaygain calculati
 option(ENABLE_PROXY_CONFIG "Enable proxy config in settings dialog" ON)
 option(ENABLE_HTTP_SERVER "Enable internal HTTP server to play non-MPD files" ON)
 option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" OFF)
+option(ENABLE_CATEGORIZED_VIEW "Enable support for categorised view" OFF)
 
 if (WIN32 OR APPLE OR HAIKU)
     option(ENABLE_DEVICES_SUPPORT "Enable suport for external devices" OFF)
@@ -325,7 +326,7 @@ set(CANTATA_SRCS ${CANTATA_SRCS}
     widgets/servicestatuslabel.cpp widgets/spacerwidget.cpp widgets/songdialog.cpp widgets/stretchheaderview.cpp
     widgets/tableview.cpp widgets/thinsplitterhandle.cpp widgets/coverwidget.cpp widgets/ratingwidget.cpp widgets/notelabel.cpp
     widgets/selectorlabel.cpp widgets/titlewidget.cpp widgets/multipagewidget.cpp widgets/singlepagewidget.cpp widgets/stackedpagewidget.cpp
-    widgets/mirrormenu.cpp widgets/genrecombo.cpp widgets/volumecontrol.cpp widgets/categorizedview.cpp
+    widgets/mirrormenu.cpp widgets/genrecombo.cpp widgets/volumecontrol.cpp
     context/lyricsettings.cpp context/ultimatelyricsprovider.cpp context/ultimatelyrics.cpp context/lyricsdialog.cpp
     context/contextwidget.cpp context/view.cpp context/artistview.cpp context/albumview.cpp context/songview.cpp context/contextengine.cpp
     context/wikipediaengine.cpp context/wikipediasettings.cpp context/othersettings.cpp context/contextsettings.cpp context/togglelist.cpp
@@ -357,8 +358,11 @@ set(CANTATA_UIS ${CANTATA_UIS}
     playlists/playlistrule.ui playlists/playlistrules.ui
     widgets/itemview.ui scrobbling/scrobblingsettings.ui)
 
+if (ENABLE_CATEGORIZED_VIEW)
+    set(CANTATA_SRCS ${CANTATA_SRCS} widgets/categorizedview.cpp)
+endif ()
 if (ENABLE_SIMPLE_MPD_SUPPORT)
-     set(CANTATA_SRCS ${CANTATA_SRCS} mpd-interface/mpduser.cpp)
+    set(CANTATA_SRCS ${CANTATA_SRCS} mpd-interface/mpduser.cpp)
 endif ()
 
 set(CANTATA_LIBS ${CANTATA_LIBS} support)
@@ -567,8 +571,10 @@ else ()
     install(TARGETS cantata RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 endif ()
 
-add_subdirectory(3rdparty/kcategorizedview)
-target_link_libraries(cantata kcategorizedview)
+if (ENABLE_CATEGORIZED_VIEW)
+    add_subdirectory(3rdparty/kcategorizedview)
+    target_link_libraries(cantata kcategorizedview)
+endif ()
 
 if (WIN32 OR APPLE OR HAIKU)
     add_subdirectory(3rdparty/qtsingleapplication)
